scrollbar fix and hero section icon changes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,27 +8,29 @@
   --background-end-rgb: 17, 17, 17;
 }
 
-
 body {
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--background-start-rgb));
   font-family: Arial, Helvetica, sans-serif;
 }
 
+/* Hide scrollbar for Chrome, Safari, and Opera */
+body::-webkit-scrollbar {
+  display: none; /* Hide the scrollbar */
+}
+
+/* Hide scrollbar for IE and Edge */
+body {
+  -ms-overflow-style: none;  /* IE and Edge */
+}
+
+/* Hide scrollbar for Firefox */
+body {
+  scrollbar-width: none;  /* Firefox */
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
-}
-
-
-/* Hide scrollbar for Chrome, Safari and Opera */
-.hide-scrollbar::-webkit-scrollbar {
-  display: none;
-}
-
-/* Hide scrollbar for IE, Edge and Firefox */
-.hide-scrollbar {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
 }
